#1 Fix alignment on sections-list module

--- a/src/modules/sections-list/_style.scss
+++ b/src/modules/sections-list/_style.scss
@@ -9,13 +9,16 @@
   display: block;
   margin-bottom: 20px;
   overflow: hidden;
-  padding: 7px 20px 12px;
+  padding: 8px 20px 8px;
   position: relative;
   text-align: left;
   text-decoration: none;
   vertical-align: middle;
   white-space: normal;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   /* modifier "more" */
   &.more {
@@ -161,13 +164,13 @@
 
 .sections-list-button-title {
   color: $gray33;
-  display: table-cell;
+  display: block;
   font-size: 15px;
   font-weight: 700;
-  height: 50px;
   line-height: 17px;
   vertical-align: middle;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .sections-list-button-text {
